# node-based-image-processor_in_cpp

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/dynamic_ports/: DynamicPortsModel.cpp  DynamicPortsModel.hpp
examples/lock_nodes_and_connections/: DelegateNodeModel.hpp
examples/resizable_images/: BlendModel.cpp  BlendModel.hpp  BrightnessContrastModel.cpp  BrightnessContrastModel.hpp  ConvolutionFilterModel.cpp  ConvolutionFilterModel.hpp  EdgeDetectionModel.cpp  EdgeDetectionModel.hpp  GaussianBlurModel.cpp  GaussianBlurModel.hpp  NoiseGenerationModel.cpp  NoiseGenerationModel.hpp  ThresholdModel.cpp  ThresholdModel.hpp  main.cpp
include/QtNodes/internal/: AbstractGraphModel.hpp  BasicGraphicsScene.hpp  NodeGraphicsObject.hpp
src/:  ImageLoaderNode.h  AbstractGraphModel.cpp  AbstractNodeGeometry.cpp  BasicGraphicsScene.cpp  Connection.cpp  Connection.h  ConnectionGraphicsObject.cpp  ConnectionState.cpp  ConnectionStyle.cpp  DataFlowGraphModel.cpp  DataFlowGraphicsScene.cpp  DefaultConnectionPainter.cpp  DefaultNodePainter.cpp  ImageInputNode.cpp  ImageInputNode.h  ImageLoaderNode.cpp  ImageOutputNode.cpp  ImageOutputNode.h  ImageViewerNode.cpp  ImageViewerNode.h  MetaType.h  Node.cpp  Node.h  NodeGraphScene.cpp  NodeGraphScene.h  NodeGraphicsObject.cpp  Port.cpp  Port.h  main.cpp  node_editor.cpp  node_editor.h  node_graph.cpp  node_graph.h  socket.cpp  socket.h  test_node.cpp  test_node.h
